--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body {
   grid-template-columns: repeat(4, 25%);
   padding: 0 5%;
   font-family: "DM Mono", monospace;
-  /* -webkit-font-smoothing: none; */
+  -webkit-font-smoothing: none;
   background: #F9F9F9;
-  color: #333333;
+  color: #000;
   font-size: 15px;
   font-weight: 300;
 }
@@ -24,11 +24,11 @@ main {
 
 p {
   margin: 0;
-  text-shadow:
+  /* text-shadow:
    -2px -2px 0 #F9F9F9,
     2px -2px 0 #F9F9F9,
     -2px 2px 0 #F9F9F9,
-     2px 2px 0 #F9F9F9;
+     2px 2px 0 #F9F9F9; */
 }
 
 .container {
