--- a/style.css
+++ b/style.css
@@ -83,7 +83,61 @@ li a {
   font-weight: 400;
 }
 
-.assignment .student-assignment div {
+/* PAGE ASSIGNMENTS */
+
+.assignments-list {
+  width: calc(100% - (2rem + 300px));
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin: 0 0 0 2rem;
+  border: none;
+}
+
+.assignment {
+  display: flex;
+  width: 7rem;
+  height: 7rem;
+  position: relative;
+  background-color: transparent;
+  text-align: center;
+  font-size: 0.75rem;
+  align-items: center;
+  justify-content: center;
+  border-bottom: none;
+  margin: 0;
+  padding: 0;
+  margin: 0.5rem;
+  border-radius: 0.3rem;
+  overflow: hidden;
+  cursor: pointer;
+  color:#333;
+  border: 1px solid #eae5ab;
+}
+
+.assignment:hover {
+  background-color: rgb(47 79 79 / 0.65);
+  color:#ddd;
+}
+
+.assignment > .background {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+}
+
+.assignment:hover {
+
+}
+
+/* .assignment .student-assignment div {
   display: flex;
   justify-content: space-between;
 }
@@ -110,4 +164,4 @@ li a {
 
 .assignment ul {
   grid-column: 2 / span 2;
-}
+} */
