--- a/style.css
+++ b/style.css
@@ -107,10 +107,11 @@ li a {
 }
 
 .assignment {
-  display: flex;
+
+  /* display: flex;
   width: 7rem;
   height: 7rem;
-  position: relative;
+  position: relative; */
   background-color: transparent;
   text-align: center;
   font-size: 0.75rem;
@@ -120,32 +121,43 @@ li a {
   margin: 0;
   padding: 0;
   margin: 0.5rem;
-  border-radius: 0.3rem;
-  overflow: hidden;
-  cursor: pointer;
+  /* border-radius: 0.3rem;
+  overflow: hidden; */
+  /* cursor: pointer; */
   color:#333;
-  border: 1px solid #eae5ab;
+  /* border: 1px solid #eae5ab; */
+
+
+  display: flex;
+  flex-direction: column;
+  background-color: transparent;
+  text-align: center;
+  font-size: 0.5rem;
+  border-bottom: none;
+  padding: 0;
+  margin: 0.5rem 0.5rem 0 0.5rem;
+  color: #333;
+  width: 7rem;
 }
 
-.assignment:hover {
-  background-color: rgb(47 79 79 / 0.65);
-  color:#ddd;
-}
-
-.assignment > .background {
+.assignment a {
+  font-size: 0.65rem;
+  margin: 0;
   width: 100%;
-  height: 100%;
+  color: #eae5ab;
+  background: none;
+}
+
+.assignment > .preview {
+  border: 1px solid #eae5ab;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  width: 7rem;
+  height: 7rem;
   display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
   background-size: cover;
   background-position: center;
-  z-index: -1;
-}
-
-.assignment:hover {
-
+  margin: 0 0 0.25rem 0;
 }
 
 /* .assignment .student-assignment div {
